# UvA-MT-at-WMT26

./: .gitignore  README.md  coherency_eval.py  coherency_eval_ae.py  coherency_eval_metricx.py  cook_for_submission.py  filter.py  generate.sh  metric_predict.py  pairwise_matrix.py  pairwise_matrix_ae.py  pairwise_matrix_metricx24.py  pyproject.toml  sequential_scaling.py  step1-filter.py  step2-parse.py  temp.py  tgt_lang.txt  tgt_lang_filter.txt
dev/: en-ru.jsonl  en-zh.jsonl  extract_dev.py
dev/gpt-4o-mini/: coherency.jsonl
results/: __init__.py  special_output_markers.py
results/gemini-3.5-flash/: arz.jsonl  arz_Arab.jsonl  bel_Cyrl.jsonl  ces_Latn.jsonl  cs_CZ.jsonl  de_AT.jsonl  de_CH.jsonl  de_DE.jsonl  ekk_Latn.jsonl  en-ar_AR.jsonl  en-ru_RU.jsonl  en-zh_CN.jsonl  et_EE.jsonl  hye_Armn.jsonl  ind_Latn.jsonl  is.jsonl  isl_Latn.jsonl  kaz_Cyrl.jsonl  ko_KR.jsonl  kor_Hang.jsonl  lij_Latn.jsonl  lld_Latn.jsonl  ru_RU.jsonl  rus_Cyrl.jsonl  sme_Latn.jsonl  zh_CN.jsonl  zho_Hans.jsonl  zho_Hant_TW.jsonl
results/gpt-4o-mini/: arz.jsonl  arz_Arab.jsonl  bel_Cyrl.jsonl  ces_Latn.jsonl  de_AT.jsonl  de_CH.jsonl  ekk_Latn.jsonl  et_EE.jsonl  hye_Armn.jsonl  ind_Latn.jsonl  is.jsonl  isl_Latn.jsonl  kaz_Cyrl.jsonl  kor_Hang.jsonl  lij_Latn.jsonl  lld_Latn.jsonl  ru_RU.jsonl  rus_Cyrl.jsonl  sme_Latn.jsonl  tha_Thai.jsonl  zh_CN.jsonl  zho_Hans.jsonl  zho_Hant_TW.jsonl
results/gpt-5.4/: arz_Arab.jsonl  ekk_Latn.jsonl  (+7 more)
rubric/: v1.txt  v2.txt  v3.ru.txt  v3.zh.txt  v4.txt  v5.txt
util/: contrastive_judge.py  genmt_check_alignment.py  openai_client.py
(+75 files in other folders)
